[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terrain_nav_py"
version = "0.0.1"
authors = [{ name = "Rhys Mainwaring", email = "rhys.mainwaring@me.com" }]
description = "Terrain navigation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD-3-Clause",
]

dependencies = [
  "matplotlib",
  "MAVProxy",
  "numpy",
  "ompl @ https://github.com/ompl/ompl/releases/download/prerelease/ompl-1.7.0-cp310-cp310-macosx_15_0_arm64.whl ; python_version == '3.10' and sys_platform == 'darwin' and platform_machine == 'arm64'",
  "ompl @ https://github.com/ompl/ompl/releases/download/prerelease/ompl-1.7.0-cp310-cp310-macosx_15_0_x86_64.whl ; python_version == '3.10' and sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "ompl @ https://github.com/ompl/ompl/releases/download/prerelease/ompl-1.7.0-cp310-cp310-manylinux_2_28_aarch64.whl ; python_version == '3.10' and sys_platform == 'linux' and platform_machine == 'aarch64'",
  "ompl @ https://github.com/ompl/ompl/releases/download/prerelease/ompl-1.7.0-cp310-cp310-manylinux_2_28_x86_64.whl ; python_version == '3.10' and sys_platform == 'linux' and platform_machine == 'x86_64'",
  "ompl @ https://github.com/ompl/ompl/releases/download/prerelease/ompl-1.7.0-cp311-cp311-macosx_15_0_arm64.whl ; python_version == '3.11' and sys_platform == 'darwin' and platform_machine == 'arm64'",
  "ompl @ https://github.com/ompl/ompl/releases/download/prerelease/ompl-1.7.0-cp311-cp311-macosx_15_0_x86_64.whl ; python_version == '3.11' and sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "ompl @ https://github.com/ompl/ompl/releases/download/prerelease/ompl-1.7.0-cp311-cp311-manylinux_2_28_aarch64.whl ; python_version == '3.11' and sys_platform == 'linux' and platform_machine == 'aarch64'",
  "ompl @ https://github.com/ompl/ompl/releases/download/prerelease/ompl-1.7.0-cp311-cp311-manylinux_2_28_x86_64.whl ; python_version == '3.11' and sys_platform == 'linux' and platform_machine == 'x86_64'",
  "ompl @ https://github.com/ompl/ompl/releases/download/prerelease/ompl-1.7.0-cp312-cp312-macosx_15_0_arm64.whl ; python_version == '3.12' and sys_platform == 'darwin' and platform_machine == 'arm64'",
  "ompl @ https://github.com/ompl/ompl/releases/download/prerelease/ompl-1.7.0-cp312-cp312-macosx_15_0_x86_64.whl ; python_version == '3.12' and sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "ompl @ https://github.com/ompl/ompl/releases/download/prerelease/ompl-1.7.0-cp312-cp312-manylinux_2_28_aarch64.whl ; python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'aarch64'",
  "ompl @ https://github.com/ompl/ompl/releases/download/prerelease/ompl-1.7.0-cp312-cp312-manylinux_2_28_x86_64.whl ; python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'x86_64'",
  "pymavlink",
  "pytest",
  "scipy",
  "shapely",
]

[project.urls]
Homepage = "https://github.com/srmainwaring/terrain_nav_py"
Issues = "https://github.com/srmainwaring/terrain_nav_py/issues"
